crates/nash-report/tests/parse/pattern/snapshots/parse__pattern__term__error_wildcard_not_var.snap
---
source: crates/nash-report/tests/parse/pattern/term.rs
assertion_line: 10
description: "Code:\n\n_foo"
info: diagnostic
---
nash::syntax

  × Variable `_foo` starts with an underscore.
   ╭─[src/Main.nash:1:1]
 1 │ _foo
   · ────
   ╰────
  help: Use `_` to ignore the value, or a name without a leading underscore.
